# DiamondFire.py

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/df/: __init__.py  code.py  codeclient.py  enums.py  exceptions.py  template.py  values.py
src/test/: basic.py  codeclient_test.py  count.py
